style(core): 统一添加类和接口的作者、创建时间及描述注释
- 为缓存常量、常用正则、系统常量等核心接口添加 @Author、@CreateTime 和 @Description 注释
- 统一实体 DTO、模型、枚举、异常等类的类注释格式及内容
- 规范注释内容表达，包含作者、创建时间和功能简述
- 删除流程相关事件类及任务受让人类以简化代码库
- 修正小程序登录体字段命名不规范问题
- 对统一响应结构类 R 进行了增强，新增警告响应和状态判断方法
- 优化日期时间格式枚举类 Comments，增加详细示例和格式匹配方法说明